# DailyNews

./: README.md
.github/workflows/: deploy-api.yml  deploy-kaggle.yml  deploy-lambda.yml  deploy-tts-container.yml
mail_retrieval/: .gitignore  daily_news.py  explorer.py  exporter.py  kaggle_exporter.py  lambda_function.py  parser.py  pyproject.toml  text_operations.py
mail_retrieval/kaggle_configs/: kernel-metadata.json
news_tts/: Dockerfile  config.json  downloader.py  generate_main.py  generator.py  preprocess.py
news_tts/daily-news-inference/: dataset-metadata.json
news_tts/tts_model_files/: config.json
reporter/: agent.py  app.py  client.py  client_wrapper.py  front.py  page.py  requirements.txt
reporter/api/: agent.py  app.py  db.py  prompt.py  pyproject.toml  secret_manager.py
reporter/frontend/: client.py  client_wrapper.py  page.py  pyproject.toml  requirements.txt
reporter/frontend/.streamlit/: config.toml
