[project]
name = "api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.43",
    "fastapi>=0.128.2",
    "langchain>=1.2.8",
    "langchain-core>=1.2.9",
    "langchain-google-genai>=4.2.0",
    "langchain-pinecone>=0.2.13",
    "langgraph>=1.0.7",
    "mangum>=0.21.0",
    "pinecone-client>=6.0.0",
    "pydantic>=2.12.5",
    "python-dotenv>=1.2.1",
    "uvicorn>=0.40.0",
]
